--- a/client/src/LoginReg.css
+++ b/client/src/LoginReg.css
@@ -8,33 +8,66 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f9;
+}
+
+.auth-container {
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 500px;
+  max-width: 900px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+}
+.main-containerlogin {
+  background-image: url("./assets/Loginback.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.main-containersignup {
+  background-image: url("./assets/Signupback.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
-.auth-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 400px;
-  background-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin: 20px;
-}
-
 .login-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
   width: 100%;
+  max-width: 600px;
+  padding: 60px;
 }
 
 h2 {
   font-size: 24px;
-  margin-bottom: 20px;
+
   color: #333;
+}
+
+.textcolor {
+  color: #a54963;
+}
+
+.subtext {
+  color: #c6a3cb;
+}
+
+.account-link-text {
+  color: #a54963;
 }
 
 .error-message {
@@ -77,7 +110,7 @@ label {
   padding: 10px;
   border: none;
   border-radius: 4px;
-  background-color: #007bff;
+  background-color: #e3b09b;
   color: #ffffff;
   font-size: 16px;
   cursor: pointer;
