--- a/client/src/LoginReg.css
+++ b/client/src/LoginReg.css
@@ -10,12 +10,21 @@ body {
   background-color: #f4f4f9;
 }
 
+.login-img {
+  height: 70vh;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
 .auth-container {
   overflow: hidden;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 500px;
+  height: auto;
   max-width: 900px;
   background-color: rgba(0, 0, 0, 0.8);
   border-radius: 15px;
@@ -73,7 +82,6 @@ h2 {
 .error-message {
   color: #e74c3c;
   font-size: 14px;
-  margin-bottom: 20px;
 }
 
 .login-form {
@@ -123,4 +131,10 @@ label {
 
 .login-button:focus {
   outline: none;
+}
+
+@media (max-width: 690px) {
+  .login-img {
+    display: none; 
+  }
 }
