--- a/client/src/LoginReg.css
+++ b/client/src/LoginReg.css
@@ -148,3 +148,11 @@ label {
   display: flex;
   gap: 20px;
 }
+
+.main-content{
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
